Fixed overflowing text input fields

--- a/silk/sidebar/src/css/components/modal.scss
+++ b/silk/sidebar/src/css/components/modal.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(255 , 255 , 255 , 0.4 );;
+    background-color: rgba( 0, 0, 0, 0.5);
     z-index: 9999;
 }
 
@@ -31,7 +31,7 @@
     box-shadow: 0 3px 30px rgba(25,30,35,.2);
     transition: all 0.2s ease-in-out;
 
-    border-radius: 2px;
+    border-radius: 3px;
 }
     .silk-modal.ReactModal__Content--after-open {
         opacity: 1;
