--- a/silk/sidebar/src/css/components/tabs.scss
+++ b/silk/sidebar/src/css/components/tabs.scss
@@ -100,5 +100,6 @@
 
     .components-text-control__input,
     .components-textarea-control__input {
+        margin: 0px 0px 0px 0px;
         color: rgba( 0 , 0 , 0 , 0.75 ) !important;
     }
